--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0"
   },
   "devDependencies": {
+    "@types/react": "^18.2.52",
     "typescript": "^5.3.3"
   },
   "repository": {
@@ -32,8 +33,5 @@
   "bugs": {
     "url": "https://github.com/digitalterrene/modal/issues"
   },
-  "homepage": "https://github.com/digitalterrene/modal#readme",
-  "dependencies": {
-    "@types/react": "^18.2.52"
-  }
+  "homepage": "https://github.com/digitalterrene/modal#readme"
 }
