--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,12 @@
+// tsconfig.json
 {
   "compilerOptions": {
     "target": "es5",
     "module": "commonjs",
     "jsx": "react",
     "strict": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "lib": ["es2015", "dom"]
   },
   "include": ["src/**/*.tsx"],
   "exclude": ["node_modules"]
