--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
 {
   "compilerOptions": {
     "target": "es5",
+    "outDir": "./dist",
     "module": "commonjs",
     "jsx": "react",
     "strict": true,
